@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(ItemList items, CategoryList categories, Ui ui): void
}

class EditPriceCommand {
    - input: String
    + EditPriceCommand(input: String)
    + execute(ItemList items, CategoryList categories, Ui ui): void
}

interface Validator <<interface>> {
    + validate(ItemList items, CategoryList categories): void
}

class EditPriceCommandValidator {
    - input: String
    + EditPriceCommandValidator(input: String)
    + validate(ItemList items, CategoryList categories): void
}

class ItemList {
    + getItem(index: int): Item
    + size(): int
}

class Item {
    + setPrice(price: double): void
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. EditPriceCommand
Validator <|.. EditPriceCommandValidator
EditPriceCommand ..> EditPriceCommandValidator : creates/validates >
EditPriceCommand ..> ItemList : reads >
EditPriceCommand ..> Item : modifies >
EditPriceCommand ..> Ui : <<uses>>

@enduml
